# overtime-system

Python-Data-Science/: app.py  overtime_records.db  pyproject.toml  requirements.txt  test_db.py
Python-Data-Science/attached_assets/: Pasted-OperationalError-sqlite3-OperationalError-no-such-column-year-Traceback-most-recent-call-last-1764582203989_1764582203989.txt  Pasted-import-sqlite3-from-datetime-import-datetime-timedelta-import-pandas-as-pd-from-flask-import-Fla-1764578109142_1764578109143.txt
Python-Data-Science/templates/: index.html
